# plum

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.tape  install.sh  plum.json
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: index.html
npm/: bin.js  package.json
src/: config.rs  main.rs
src/scanner/: advisory.rs  mod.rs  npm.rs  osv.rs  patterns.rs  score.rs  tarball.rs  typosquat.rs
