[package]
name = "plum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "plum"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tar = "0.4"
flate2 = "1"
regex = "1"
colored = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
strsim = "0.11"
